--- a/wwwroot/index.ejs
+++ b/wwwroot/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">  <!-- Use Chrome Frame in IE -->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="description" content="A web map built on Terria Map">
+    <meta name="description" content="NSW Telco Authority general purpouse mapping platform">
     <meta name="copyright" content="Copyright(c) 2012-2016 National ICT Australia Limited (NICTA), CSIRO Data61.  All rights reserved.">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -23,11 +23,11 @@
     <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
     <link rel="manifest" href="favicons/manifest.json">
-    <meta name="msapplication-TileColor" content="#282D32">
+    <meta name="msapplication-TileColor" content="#002664">
     <meta name="msapplication-TileImage" content="favicons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#282D32">
+    <meta name="theme-color" content="#002664">
 
-    <title>Terria Map</title>
+    <title>Slim JIMS - NSW Telco Authority</title>
 
     <!-- Leaflet -->
     <script>L_PREFER_CANVAS = true;</script>
